# firephenix-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot_runner.py  database.py  discordbot.py  docker-compose.test.yml  legacy_database_import.py  logger.py  pyproject.toml  rankingsystem.py  renovate.json  requirements.txt  run.py  teamspeakbot.py  ts.py
.github/ci/: backend-standalone-smoke.sh  bot-teamspeak-smoke.sh  firephenix-stack-smoke.sh
.github/workflows/: deploy.yml
app/: __init__.py  config.py
app/api/: request_args.py
app/api/admin/: routes.py
app/api/auth/: routes.py
app/api/gameservers/: routes.py
app/api/ranking/: routes.py
app/api/user/: routes.py
app/bots/: discordbot.py  teamspeakbot.py
app/rankingsystem/: rankingsystem.py
app/rankingsystem/bots/: discordbot.py  teamspeakbot.py
app/utils/: async_database.py  database.py  gameserver_manager.py  legacy_database_import.py  logger.py  redis_manager.py  security.py  source_server.py  steam.py  ttt_achievement_consumer.py  valkey_manager.py
scripts/: run-integration-tests.sh
tests/: test_admin_routes.py  test_config_and_security.py  test_discord_profile_commands.py  test_discord_tracking.py  test_ember_ai.py  test_gameservers.py  test_rankingsystem_async.py  test_request_args.py  test_skin_redemption.py  test_teamspeak_bot.py  test_ttt_achievements.py  test_verification_merge.py
tests/integration/: harness.py  test_admin_api.py  test_admin_movers.py  test_auth_flow.py  test_gameserver_and_skins.py  test_identity_bridge.py  test_ranking_api.py  test_valkey_async.py
(+29 files in other folders)
