[project]
name = "firephenix-backend"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "discord.py",
    "flask",
    "flask-cors",
    "flask-limiter[valkey]",
    "gunicorn",
    "mariadb",
    "psutil",
    "python-dotenv",
    "requests>=2.28.0",
    "ts3>=2.0.0b2",
    "valkey[libvalkey]",
]

[tool.uv]
package = false
